<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/txtMostrar"
        android:layout_width="@dimen/largura"
        android:layout_height="150dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="@dimen/largura"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"  />

        <Button
            android:id="@+id/btMostrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao"
            android:background="@color/verde_azulado_claro"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/margem"
        android:text="@string/tamanhoLetra"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="@dimen/largura"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem">

        <SeekBar
            android:id="@+id/sbTamanho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:min="15"
            android:max="130"/>

        <TextView
            android:id="@+id/txtTamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrarTamanho"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estiloLetra"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/margem"/>

    <CheckBox
        android:id="@+id/cbNegrito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/negrito"/>

    <CheckBox
        android:id="@+id/cbItalico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/italico"/>

    <CheckBox
        android:id="@+id/cbMaiusculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/maiusculo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corTexto"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/margem"/>

    <RadioGroup
        android:id="@+id/rgCor"
        android:layout_width="@dimen/largura"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margem">

        <RadioButton
            android:id="@+id/rbVermelho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/vermelho"/>

        <RadioButton
            android:id="@+id/rbVerde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/verde"/>

        <RadioButton
            android:id="@+id/rbAzul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/azul" />

    </RadioGroup>

</LinearLayout>